
  * Added dragndrop support to Album Browser. You can drag the tracks or
    with control the cover to another album
  * Added comments, composer and disk number
  * Ctrl-A select all itmes in ListBoxes
  * Select Album cover dialog accepts now a remote url
  * Added an Album Browser panel where you can view the albums with big covers
  * Added option to add library path from menu
  * Added option to rescan the library
  * Added playback vumeters
  * You can rearrange panels in PlayLists panel
  * You can select which filters to show in the library and radio
  * You can rearrange the panels in the screen
  * Added support to playlist (m3u,pls,axs,xpfs) to Player. You can drop it
    to player playlist or load it from command line.
  * Corrected a bug editing commands and links in preferences
  * Added option to repeat the current track
  * The genre edit field shows now all existing genres to choose one of them 
  * In status bar now is shown the leng of the current selection and the size 
  * If a filter is set the label is highlighted to indicate it even when its hidden
  * In Lyrics you can paste the content of the clipboard
  * LyricsPanel accept now drop audio files on it to show the lyrics
  * Last.fm panel accept now drop audio files on it to show the information
  * Added italian translation
  * Added Ultimate-guitar.com as lyrics source for guitar tabs
  * If the track length is not correctly read by taglib read at play time using gstreamer
  * Added Events to last.fm information panel
  * Implemented PlayList import/export from m3u, pls, axs, xspf playlist file formats
  * Ratings of tracks can be set clicking over the stars in tracks listboxes
    in library and playlists panel
  * Added an option to export/import user defined radio stations
    The format is a xml like this. 
	<RadioStations>
	  <RadioStation>
	    <Name>StationName0</Name>
	    <Url>StationLink</Url>
          </RadioStation>
          ...
       </RadioStations>