@@ -45,55 +45,71 @@
 #include <wx/spinctrl.h>
 #include <wx/dialog.h>
 
+enum guDYNAMIC_FILTER_TYPE {
+    guDYNAMIC_FILTER_TYPE_TITLE = 0,
+    guDYNAMIC_FILTER_TYPE_ARTIST,
+    guDYNAMIC_FILTER_TYPE_ALBUM,
+    guDYNAMIC_FILTER_TYPE_GENRE,
+    guDYNAMIC_FILTER_TYPE_LABEL,
+    guDYNAMIC_FILTER_TYPE_COMPOSER,
+    guDYNAMIC_FILTER_TYPE_COMMENT,
+    guDYNAMIC_FILTER_TYPE_PATH,
+    guDYNAMIC_FILTER_TYPE_YEAR,
+    guDYNAMIC_FILTER_TYPE_RATING,
+    guDYNAMIC_FILTER_TYPE_LENGTH,
+    guDYNAMIC_FILTER_TYPE_PLAYCOUNT,
+    guDYNAMIC_FILTER_TYPE_LASTPLAY,
+    guDYNAMIC_FILTER_TYPE_ADDEDDATE
+};
 
-#define guDYNAMIC_FILTER_TYPE_TITLE                     0
-#define guDYNAMIC_FILTER_TYPE_ARTIST                    1
-#define guDYNAMIC_FILTER_TYPE_ALBUM                     2
-#define guDYNAMIC_FILTER_TYPE_GENRE                     3
-#define guDYNAMIC_FILTER_TYPE_LABEL                     4
-#define guDYNAMIC_FILTER_TYPE_PATH                      5
-#define guDYNAMIC_FILTER_TYPE_YEAR                      6
-#define guDYNAMIC_FILTER_TYPE_RATING                    7
-#define guDYNAMIC_FILTER_TYPE_LENGTH                    8
-#define guDYNAMIC_FILTER_TYPE_PLAYCOUNT                 9
-#define guDYNAMIC_FILTER_TYPE_LASTPLAY                  10
-#define guDYNAMIC_FILTER_TYPE_ADDEDDATE                 11
+enum guDYNAMIC_FILTER_ORDER {
+    guDYNAMIC_FILTER_ORDER_TITLE = 0,
+    guDYNAMIC_FILTER_ORDER_ARTIST,
+    guDYNAMIC_FILTER_ORDER_ALBUM,
+    guDYNAMIC_FILTER_ORDER_GENRE,
+    guDYNAMIC_FILTER_ORDER_LABEL,
+    guDYNAMIC_FILTER_ORDER_COMPOSER,
+    //guDYNAMIC_FILTER_ORDER_PATH,
+    guDYNAMIC_FILTER_ORDER_YEAR,
+    guDYNAMIC_FILTER_ORDER_RATING,
+    guDYNAMIC_FILTER_ORDER_LENGTH,
+    guDYNAMIC_FILTER_ORDER_PLAYCOUNT,
+    guDYNAMIC_FILTER_ORDER_LASTPLAY,
+    guDYNAMIC_FILTER_ORDER_ADDEDDATE,
+    guDYNAMIC_FILTER_ORDER_RANDOM
+};
 
-#define guDYNAMIC_FILTER_ORDER_TITLE                    0
-#define guDYNAMIC_FILTER_ORDER_ARTIST                   1
-#define guDYNAMIC_FILTER_ORDER_ALBUM                    2
-#define guDYNAMIC_FILTER_ORDER_GENRE                    3
-#define guDYNAMIC_FILTER_ORDER_LABEL                    4
-//#define guDYNAMIC_FILTER_ORDER_PATH                     5
-#define guDYNAMIC_FILTER_ORDER_YEAR                     5
-#define guDYNAMIC_FILTER_ORDER_RATING                   6
-#define guDYNAMIC_FILTER_ORDER_LENGTH                   7
-#define guDYNAMIC_FILTER_ORDER_PLAYCOUNT                8
-#define guDYNAMIC_FILTER_ORDER_LASTPLAY                 9
-#define guDYNAMIC_FILTER_ORDER_ADDEDDATE                10
-#define guDYNAMIC_FILTER_ORDER_RANDOM                   11
+enum guDYNAMIC_FILTER_OPTION_STRING {
+    guDYNAMIC_FILTER_OPTION_STRING_CONTAINS = 0,
+    guDYNAMIC_FILTER_OPTION_STRING_NOT_CONTAINS,
+    guDYNAMIC_FILTER_OPTION_STRING_EQUAL,
+    guDYNAMIC_FILTER_OPTION_STRING_START_WITH,
+    guDYNAMIC_FILTER_OPTION_STRING_ENDS_WITH
+};
 
-#define guDYNAMIC_FILTER_OPTION_STRING_CONTAINS         0
-#define guDYNAMIC_FILTER_OPTION_STRING_NOT_CONTAINS     1
-#define guDYNAMIC_FILTER_OPTION_STRING_EQUAL            2
-#define guDYNAMIC_FILTER_OPTION_STRING_START_WITH       3
-#define guDYNAMIC_FILTER_OPTION_STRING_ENDS_WITH        4
+enum guDYNAMIC_FILTER_OPTION_YEAR {
+    guDYNAMIC_FILTER_OPTION_YEAR_EQUAL = 0,
+    guDYNAMIC_FILTER_OPTION_YEAR_AFTER,
+    guDYNAMIC_FILTER_OPTION_YEAR_BEFORE,
+};
 
-#define guDYNAMIC_FILTER_OPTION_YEAR_EQUAL              0
-#define guDYNAMIC_FILTER_OPTION_YEAR_AFTER              1
-#define guDYNAMIC_FILTER_OPTION_YEAR_BEFORE             2
+enum guDYNAMIC_FILTER_OPTION_NUMERIC {
+    guDYNAMIC_FILTER_OPTION_NUMERIC_EQUALS = 0,
+    guDYNAMIC_FILTER_OPTION_NUMERIC_AT_LEAST,
+    guDYNAMIC_FILTER_OPTION_NUMERIC_AT_MOST,
+};
 
-#define guDYNAMIC_FILTER_OPTION_NUMERIC_EQUALS          0
-#define guDYNAMIC_FILTER_OPTION_NUMERIC_AT_LEAST        1
-#define guDYNAMIC_FILTER_OPTION_NUMERIC_AT_MOST         2
+enum guDYNAMIC_FILTER_OPTION_DATE {
+    guDYNAMIC_FILTER_OPTION_DATE_IN_THE_LAST = 0,
+    guDYNAMIC_FILTER_OPTION_DATE_BEFORE_THE_LAST
+};
 
-#define guDYNAMIC_FILTER_OPTION_DATE_IN_THE_LAST        0
-#define guDYNAMIC_FILTER_OPTION_DATE_BEFORE_THE_LAST    1
-
-#define guDYNAMIC_FILTER_LIMIT_TRACKS                   0
-#define guDYNAMIC_FILTER_LIMIT_MINUTES                  1
-#define guDYNAMIC_FILTER_LIMIT_MEGABYTES                2
-#define guDYNAMIC_FILTER_LIMIT_GIGABYTES                3
+enum guDYNAMIC_FILTER_LIMIT {
+    guDYNAMIC_FILTER_LIMIT_TRACKS = 0,
+    guDYNAMIC_FILTER_LIMIT_MINUTES,
+    guDYNAMIC_FILTER_LIMIT_MEGABYTES,
+    guDYNAMIC_FILTER_LIMIT_GIGABYTES
+};
 
 
 // -------------------------------------------------------------------------------- //
